[package]
name = "opus"
version = "0.3.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = ["api-bindings", "encoding", "compression",
	"multimedia::audio", "multimedia::encoding"]

repository = "https://github.com/SpaceManiac/opus-rs"
documentation = "https://docs.rs/opus/0.3.0/opus"

[dependencies]
libc = "0.2"
audiopus_sys = { git="https://github.com/sdwoodbury/audiopus_sys", rev="eef5f474899fee12c63a2e719e2c8a6780098bb0", default-features = false }

[features]
default = ["audiopus_sys/default"]
static = ["audiopus_sys/static"]
dynamic = ["audiopus_sys/dynamic"]